--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Upravená verze ORM Cheatsheet | Doctrine2
+title: UPRAVENÁ VERZE -  ORM Cheatsheet | Doctrine2
 overview: true
 ---
 
